gcc/testsuite/g++.dg/warn/Woverloaded-virt12.C
@@ -1,0 +1,23 @@
+// PR c++/109918 - Test covariant return types
+// { dg-do compile { target c++11 } }
+// { dg-additional-options -Woverloaded-virtual }
+
+struct Big { virtual ~Big () {} };
+struct Smaller : Big {};
+
+// Single inheritance case
+struct Foo {
+  virtual Big* getMe() const;
+};
+struct Bar : Foo {
+  virtual Smaller* getMe() const;
+};
+
+// Multiple inheritance case
+struct Troops { virtual ~Troops(); };
+struct Control {
+  virtual Big* GetControl() const;
+};
+struct Army : Troops, Control {
+  virtual Smaller* GetControl() const;
+};
